# ScamShield

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/scamshield/: __init__.py  __main__.py  config.py  core.py  signals.py  utils.py
tests/: test_core.py
